--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -21,13 +21,65 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-C:\PARK_HAYASTANIN\ASTERISK\randFolder\Lightweight\Lightweight.uvprojx
+C:\PARK_HAYASTANIN\ASTERISK\Asterisk_team\Lightweight\Lightweight.uvprojx
 Project File Date:  01/20/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
+compiling Processing_coord.cpp...
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
+  #define FORWARD_ROLE 1
+.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+src\Processing_coord\Processing_coord.h(65): warning:  #1-D: last line of file ends without a newline
+  };
+src\Processing_coord\Processing_coord.cpp(73): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	_targetIMU = RAD2DEG * atan2(float(_x - ENEMY_X), float(_y - ENEMY_Y)) - 180;
+src\Processing_coord\Processing_coord.cpp(78): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	if (_x > GOAL_OUT_X_THRESHOLD_RIGHT) _targetIMU = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 180);
+src\Processing_coord\Processing_coord.cpp(79): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	else if (_x < GOAL_OUT_X_THRESHOLD_LEFT) _targetIMU = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 180);
+src\Processing_coord\Processing_coord.cpp(80): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	else _targetIMU = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 180);
+src\Processing_coord\Processing_coord.cpp(86): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	float ang = atan2(float(DIST_BETWEEN_GOALS - y), float(x)) * RAD2DEG;
+src\Processing_coord\Processing_coord.cpp(102): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
+src\Processing_coord\Processing_coord.cpp(111): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		speed = err * 0.03; //0.042
+src\Processing_coord\Processing_coord.cpp(123): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
+src\Processing_coord\Processing_coord.cpp(134): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		p = 0.005 * err;
+src\Processing_coord\Processing_coord.cpp(135): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		d = (err - errOldGkLine) * 0.1;
+src\Processing_coord\Processing_coord.cpp(146): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) + 90);
+src\Processing_coord\Processing_coord.cpp(148): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.angle = 180 + adduct(RAD2DEG * atan2(float(_y), float(_x)) + 90);
+src\Processing_coord\Processing_coord.cpp(152): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			p = 0.003 * err;
+src\Processing_coord\Processing_coord.cpp(161): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.angle = adduct(RAD2DEG * atan2(float(DOWN_Y_GOALKEEPER_RIGHT - _y), float(pointX - _x)));//90 + _angle;
+src\Processing_coord\Processing_coord.cpp(162): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.length = 0.025 * sqrt(pow(float(DOWN_Y_GOALKEEPER_RIGHT - _y), 2) + pow(float(pointX - _x), 2));
+src\Processing_coord\Processing_coord.cpp(167): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.angle = 180 + adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
+src\Processing_coord\Processing_coord.cpp(169): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
+src\Processing_coord\Processing_coord.cpp(173): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			p = 0.003 * err;
+src\Processing_coord\Processing_coord.cpp(181): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				res.length = 0.045 * float(DOWN_Y_GOALKEEPER_LEFT - _y);
+src\Processing_coord\Processing_coord.cpp(194): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	float ang = atan2(float(y), float(x)) * RAD2DEG;
+src\Processing_coord\Processing_coord.cpp(232): warning:  #1-D: last line of file ends without a newline
+  }
+src\Processing_coord\Processing_coord.cpp: 25 warnings, 0 errors
 compiling main.cpp...
 .\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
   #define FORWARD_ROLE 1
@@ -127,7 +179,7 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(15): warning:  #1-D: last line of file ends without a newline
   #define FORWARD_ROLE 1
-.\src\Processing_coord\Processing_coord.h(60): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(65): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\libraries.h(27): warning:  #1-D: last line of file ends without a newline
   #include "flash.h"
@@ -137,16 +189,18 @@ compiling main.cpp...
     FLASH_Lock();
 .\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
   }
-.\src\Robot\Robot.h(193): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(169): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		angGoal = RAD2DEG * atan2(float(y), float(x));
+.\src\Robot\Robot.h(206): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp(18): warning:  #111-D: statement is unreachable
   	return 0;
 src\main\main.cpp(19): warning:  #1-D: last line of file ends without a newline
   }
-src\main\main.cpp: 57 warnings, 0 errors
+src\main\main.cpp: 58 warnings, 0 errors
 linking...
-Program Size: Code=36050 RO-data=1426 RW-data=248 ZI-data=11552  
-".\Objects\Lightweight.axf" - 0 Error(s), 57 Warning(s).
+Program Size: Code=36250 RO-data=1426 RW-data=248 ZI-data=11552  
+".\Objects\Lightweight.axf" - 0 Error(s), 83 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -172,12 +226,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
+      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
