--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -37,7 +37,7 @@ compiling Goalkeeper.cpp...
   #define P_MODE 1
 .\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(48): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(49): warning:  #1-D: last line of file ends without a newline
   };
 src\Goalkeeper\Goalkeeper.h(43): warning:  #1-D: last line of file ends without a newline
   };
@@ -61,12 +61,160 @@ src\Goalkeeper\Goalkeeper.cpp(130): warning:  #1035-D: single-precision operand 
   			if (globalAngToBall > angGoal) res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) - 90);
 src\Goalkeeper\Goalkeeper.cpp(131): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			else res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
-src\Goalkeeper\Goalkeeper.cpp(166): warning:  #1-D: last line of file ends without a newline
+src\Goalkeeper\Goalkeeper.cpp(169): warning:  #1-D: last line of file ends without a newline
   }
 src\Goalkeeper\Goalkeeper.cpp: 17 warnings, 0 errors
+compiling main.cpp...
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
+  #endif /* PIN_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usable\usable.h(36): warning:  #1-D: last line of file ends without a newline
+  #endif /* USABLE_H_ */
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\adc\adc.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\dma\dma.h(19): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\omniplatform\omniplatform.h(17): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IMU_USART\IMU_USART.h(37): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
+  #define RAD2DEG	57.2957795130823208767f
+.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
+  #define DEG2RAD	0.017453292519943295769f
+.\src\OpenMV\OpenMV.h(37): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\TSOP\TSOP.h(7): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
+  #define DEG2RAD	0.01745329251994329576f
+.\src\TSOP\TSOP.h(29): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\I2C\I2C.h(28): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IR_Locator\IR_Locator.h(25): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Vec2b\Vec2b.h(8): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\TSOP\TSOP.h")
+  #define RAD2DEG	57.2957795130823208767
+.\src\Vec2b\Vec2b.h(9): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\TSOP\TSOP.h")
+  #define DEG2RAD	0.01745329251994329576
+.\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+.\src\Queues_ball\Queues_ball.h(67): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Processing_coord\Processing_coord.h(49): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Forward\Forward.h(70): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Goalkeeper\Goalkeeper.h(43): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\flash\flash.h(16): warning:  #111-D: statement is unreachable
+    FLASH_Lock();
+.\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Voltage\Voltage.h(18): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Button\Button.h(23): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\libraries.h(34): warning:  #1-D: last line of file ends without a newline
+  #include "BallSensor.h"
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\BallSensor\BallSensor.h(17): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\Robot\Robot.h(239): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			if (dist < 5.1) offset = 0;
+.\src\Robot\Robot.h(240): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
+.\src\Robot\Robot.h(362): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
+.\src\Robot\Robot.h(465): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp(14): warning:  #111-D: statement is unreachable
+  	return 0;
+src\main\main.cpp(15): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp: 73 warnings, 0 errors
 linking...
-Program Size: Code=47814 RO-data=1430 RW-data=416 ZI-data=16224  
-".\Objects\Lightweight.axf" - 0 Error(s), 17 Warning(s).
+Program Size: Code=48014 RO-data=1430 RW-data=416 ZI-data=16224  
+".\Objects\Lightweight.axf" - 0 Error(s), 90 Warning(s).
 
 <h2>Software Packages used:</h2>
 
